--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <div class="col-md-8 col-xl-6 text-center text-md-start mx-auto">
                     <div class="text-center">
                         <p class="fw-bold text-success mb-2">Media Pembelajaran Berbasis Web</p>
-                        <h1 class="fw-bold">Solusi Belajar Asyik dan Menyenangkan</h1><a class="btn btn-success" role="button" id="evaluasi" href="/files/modul.pdf" style="margin-top: 50px;">Unduh Materi Ajar</a>
+                        <h1 class="fw-bold">Solusi Belajar Asyik dan Menyenangkan</h1><a class="btn btn-success" role="button" id="evaluasi" href="/files/modul.pdf" style="margin-top: 50px;">Baca Materi Ajar</a>
                     </div>
                 </div>
                 <div class="col"><img class="img-fluid" data-bss-parallax="" data-bss-parallax-speed="0.4" src="assets/img/clipboard-image-4.png">
