--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/files/modul.pdf">Materi Ajar</a></li>
+                    <li class="nav-item"><a class="nav-link" href="mediabelajartumbuhan/files/modul.pdf">Materi Ajar</a></li>
                     <li class="nav-item"><a class="nav-link" href="about.html">Tentang saya</a></li>
                 </ul><a class="btn btn-primary shadow" role="button" id="evaluasi-1" href="https://forms.gle/ZtjmTVTiWwSZQ2nc6">Evaluasi</a>
             </div>
@@ -32,7 +32,7 @@
                 <div class="col-md-8 col-xl-6 text-center text-md-start mx-auto">
                     <div class="text-center">
                         <p class="fw-bold text-success mb-2">Media Pembelajaran Berbasis Web</p>
-                        <h1 class="fw-bold">Solusi Belajar Asyik dan Menyenangkan</h1><a class="btn btn-success" role="button" id="evaluasi" href="/files/modul.pdf" style="margin-top: 50px;">Baca Materi Ajar</a>
+                        <h1 class="fw-bold">Solusi Belajar Asyik dan Menyenangkan</h1><a class="btn btn-success" role="button" id="evaluasi" href="modul.html" style="margin-top: 50px;">Baca Materi Ajar</a>
                     </div>
                 </div>
                 <div class="col"><img class="img-fluid" data-bss-parallax="" data-bss-parallax-speed="0.4" src="assets/img/clipboard-image-4.png">
