--- a/modul.html
+++ b/modul.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800&amp;display=swap">
 </head>
 
-<body> <iframe src="https://alfisyahrani000.github.io/mediabelajartumbuhan/files/modul.pdf" width="100%" height="800px">
+<body style="overflow-y: hidden;"> <iframe src="https://alfisyahrani000.github.io/mediabelajartumbuhan/files/modul.pdf" width="100%" height="1000px">
 </iframe>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/bold-and-dark.js"></script>
