--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="mediabelajartumbuhan/files/modul.pdf">Materi Ajar</a></li>
+                    <li class="nav-item"><a class="nav-link" href="files/modul.pdf">Materi Ajar</a></li>
                     <li class="nav-item"><a class="nav-link" href="about.html">Tentang saya</a></li>
                 </ul><a class="btn btn-primary shadow" role="button" id="evaluasi-1" href="https://forms.gle/ZtjmTVTiWwSZQ2nc6">Evaluasi</a>
             </div>
