update index again

--- a/index.html
+++ b/index.html
@@ -77,8 +77,13 @@
                         <div style="padding-left: 20px;">
                             <h1 style="font-family: 'Amatic SC', serif;">belajar itu harus menyenangkan</h1>
                             <hr style="border-top: dashed 3px tomato;width: 50%;">
-                            <p style="font-family: Lato, sans-serif;font-weight: normal;color: rgb(153,153,153);">Non enim praesent elementum facilisis. Facilisis volutpat est velit egestas dui id ornare. Lobortis mattis aliquam faucibus purus. Volutpat consequat mauris nunc congue nisi vitae. Quis auctor elit sed vulputate. Nisl nisi scelerisque eu ultrices vitae auctor<br></p>
-                            <p style="font-family: Lato, sans-serif;font-weight: normal;color: rgb(153,153,153);">Non enim praesent elementum facilisis. Facilisis volutpat est velit egestas dui id ornare. Lobortis mattis aliquam faucibus purus. Volutpat consequat mauris nunc congue nisi vitae. Quis auctor elit sed vulputate. Nisl nisi scelerisque eu ultrices vitae auctor<br></p>
+                            <p style="font-family: Lato, sans-serif;font-weight: normal;color: rgb(153,153,153);">
+                                Taukah kalian? tumbuhan memiliki peran penting untuk kelangsungan kehidupan manusia. Tanpa tumbuhan, manusia dan hewan tidak akan memiliki udara segar untuk bernapas. Melalui proses fotosintesis, tumbuhan akan melepaskan oksigen kembali ke atmosfer. Di samping itu, tumbuhan tersusun dari sel-sel yang membentuk jaringan. Nantinya, beberapa jaringan tersebut akan membentuk suatu fungsi organ.
+Struktur tumbuhan terdiri dari beberapa bagian yang berbeda. Tiga bagian utama tumbuhan meliputi dakar, daun, dan batang. Di mana setiap bagian memiliki serangkaian tugas dan fungsinya untuk menjaga kesehatan tanaman.
+
+
+                                <br></p>
+                            <p style="font-family: Lato, sans-serif;font-weight: normal;color: rgb(153,153,153);">Lantas, apa saja struktur tumbuhan dan fungsinya? Simak ulasannya disini!!<br></p>
                             <div>
                                 <p class="text-center" style="position: relative;font-family: Lato, sans-serif;font-weight: normal;color: rgb(1,1,1);background-color: #e3f1c6;padding: 5px 15px;padding-left: 50px;border-radius: 5px;"><i class="far fa-hand-point-left" style="position: absolute;top: 10px;left: 10px;font-size: 37px;z-index: 10;"></i>Silahkan pilih menu disebelah untuk mulai<br>menggunakan aplikasi ini<br></p>
                             </div>
